[package]
name = "bus-rs-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus-rs = { path = "../bus-rs" }
futures-util = "0.3"
redis.workspace = true
tokio.workspace = true
async-trait.workspace = true
