[package]
name = "bus-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = [ "derive" ] } 
bus-rs-macros = { path = "../bus-rs-macros" }
tokio.workspace = true
async-trait.workspace = true
futures = "0.3.17"
