[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus-rs = { path = "../bus-rs" }
bus-rs-macros = { path = "../bus-rs-macros" }
serde_json.workspace = true
serde = { workspace = true, features = [ "derive" ] } 
