[package]
name = "tests"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus-rs = { path = "../bus-rs" }
bus-rs-macros = { path = "../bus-rs-macros" }
bus-rs-redis = { path = "../bus-rs-redis" }
serde_json.workspace = true
serde = { workspace = true, features = [ "derive" ] } 
redis.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures-util.workspace = true

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git", tag = "0.14.0", features = [ "watchdog" ] }
